@@ -193,8 +193,31 @@ License: GPL-3+
  along with this program.  If not, see <http://www.gnu.org/licenses/>.
  .
  On Debian systems, the full text of the GNU General Public
- License version 2 can be found in the file
+ License version 3 can be found in the file
  `/usr/share/common-licenses/GPL-3'.
+
+Files: debian/mupdf.sh
+Copyright: 2001 Alcove (Yann Dirson <yann.dirson@fr.alcove.com>)
+           2011 Michael Gilbert <michael.s.gilbert@gmail.com>
+           2011 Osamu Aoki <osamu@debian.org>
+           2013 Jörg-Volker Peetz <jvpeetz@web.de>
+License: GPL-2+
+ This program is free software: you can redistribute it and/or modify
+ it under the terms of the GNU General Public License as published by
+ the Free Software Foundation, either version 2 of the License, or
+ (at your option) any later version.
+ .
+ This program is distributed in the hope that it will be useful,
+ but WITHOUT ANY WARRANTY; without even the implied warranty of
+ MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+ GNU General Public License for more details.
+ .
+ You should have received a copy of the GNU General Public License
+ along with this program.  If not, see <http://www.gnu.org/licenses/>.
+ .
+ On Debian systems, the full text of the GNU General Public
+ License version 2 can be found in the file
+ `/usr/share/common-licenses/GPL-2'.
 
 License: AGPL-3
                      GNU AFFERO GENERAL PUBLIC LICENSE
