@@ -9,8 +9,10 @@ mupdf (1.4-1) UNRELEASED; urgency=medium
   * Enable JavaScript support with v8. (Closes: #743414)
   * Won't crash when pdf file changes. (Closes: #699686)
   * Don't exit when reload pdf failes. (Closes: #702479)
+  * Add mupdf.sh so it could be used with compressed pdf-files. Thanks
+    Jörg-Volker Peetz! (Closes: #734183)
 
- -- Kan-Ru Chen (陳侃如) <koster@debian.org>  Sun, 20 Apr 2014 00:27:46 +0800
+ -- Kan-Ru Chen (陳侃如) <koster@debian.org>  Sun, 20 Apr 2014 00:39:07 +0800
 
 mupdf (1.3-2) unstable; urgency=medium
 
